manifest_eks/api-gateway-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway-cont
        image: 397920213006.dkr.ecr.ap-south-1.amazonaws.com/api-gateway-service:21
        ports:
        - containerPort: 8080
