manifest_eks/payment-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment-cont
        image: 397920213006.dkr.ecr.ap-south-1.amazonaws.com/payment-service:23
        ports:
        - containerPort: 8084
