manifest_eks/api-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  type: NodePort
  ports:
  - targetPort: 8080
    port: 8080
    nodePort: 31080
