manifest_eks/payment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  type: ClusterIP
  ports:
  - targetPort: 8084
    port: 8084
