manifest_eks/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stylekart-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: stylekart-db-pod
  template:
    metadata:
      labels:
        name: stylekart-db-pod
    spec:
      containers:
      - image: postgres:16
        name: stylekart-db-cont
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: stylekart-db-mount
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: stylekart-db-mount
    spec:
      accessModes: [ "ReadWriteOncePod" ]
      storageClassName: "gp2-csi"
      resources:
        requests:
          storage: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: stylekart-db-svc
spec:
  selector:
    name: stylekart-db-pod
  clusterIP: None
  ports:
  - port: 5432
    targetPort: 5432
